--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,12 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
+        name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }
+      -
         name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
