--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,3 +63,9 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      -
+        name: Keep scheduled workflows alive
+        uses: gautamkrishnar/keepalive-workflow@master
+        with:
+          committer_username: keepalive-bot
+          committer_email: keepalive-bot@keepalive-bot
